--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,15 @@
-<h1>User#index</h1>
-<p>Find me in app/views/user/index.html.erb</p>
+<div class="valign-wrapper">
+
+  <div class="row center-align">
+      <div class="col s8 push-s2 valign center-align">
+
+        <h1 class="center-align">Dungeons & Prejudice & Zombies</h1>
+
+        <div class="row">
+            <a class="waves-effect waves-red btn-large col s5 left"><strong>New User</strong></a>
+            <a class="waves-effect waves-red btn-large col s5 right"><strong>Login</strong></a>
+        </div>
+      </div>
+  </div>
+
+</div>
